--- a/springapp/src/main/webapp/WEB-INF/classes/jdbc.properties
+++ b/springapp/src/main/webapp/WEB-INF/classes/jdbc.properties
@@ -1,8 +1,3 @@
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/springapp
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#jdbc.username=springapp
-#jdbc.password=spring123
 
 spring.datasource.url=jdbc:mysql://localhost:3306/springapp?serverTimezone=UTC&useSSL=false&autoReconnect=true
 spring.datasource.username=springapp
@@ -10,6 +5,7 @@ spring.datasource.password=spring123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.validationQuery=SELECT 1
 
 
 
