--- a/springapp/pom.xml
+++ b/springapp/pom.xml
@@ -123,65 +123,33 @@
 		
 		<!-- **************************************************************************** -->
 		
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring</artifactId>-->
-<!--			<version>2.5.6</version>-->
-<!--		</dependency>-->
-<!--		 https://mvnrepository.com/artifact/org.springframework/spring-dao -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring-dao</artifactId>-->
-<!--			<version>2.0.8</version>-->
-<!--		</dependency>-->
-<!--		 https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.data</groupId>-->
-<!--			<artifactId>spring-data-jpa</artifactId>-->
-<!--			<version>2.0.0.RELEASE</version>-->
-<!--		</dependency>-->
-<!--		 https://mvnrepository.com/artifact/org.springframework/spring-mock -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring-mock</artifactId>-->
-<!--			<version>2.0</version>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
-<!--		 https://mvnrepository.com/artifact/org.springframework/spring-support -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring-support</artifactId>-->
-<!--			<version>2.0.8</version>-->
-<!--		</dependency>					-->
-<!--		 https://mvnrepository.com/artifact/org.springframework/spring-aop -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring-aop</artifactId>-->
-<!--			<version>4.3.30.RELEASE</version>-->
-<!--		</dependency>								-->
-<!--		 https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring-jdbc</artifactId>-->
-<!--			<version>4.3.30.RELEASE</version>-->
-<!--		</dependency>						-->
-<!--		 https://mvnrepository.com/artifact/org.springframework/spring-test -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring-test</artifactId>-->
-<!--			<version>4.3.30.RELEASE</version>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
-<!--		 https://mvnrepository.com/artifact/org.springframework/spring-tx -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework</groupId>-->
-<!--			<artifactId>spring-tx</artifactId>-->
-<!--			<version>4.3.30.RELEASE</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.3.30.RELEASE</version>
+		</dependency>	
+			
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-aop</artifactId>
+		    <version>4.3.30.RELEASE</version>
+		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.30.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>4.3.30.RELEASE</version>
+		</dependency>
 		
+				
+		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->		
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
@@ -411,15 +379,7 @@
 			<artifactId>freemarker</artifactId>
 			<version>2.3.8</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-		
-		<!-- Esta repetida tiene una mejor version
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
-		</dependency>-->
-		
+				
 		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
