--- a/springapp/pom.xml
+++ b/springapp/pom.xml
@@ -116,40 +116,72 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 		
 		
 		<!-- **************************************************************************** -->
 		
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>4.3.30.RELEASE</version>
-		</dependency>	
-			
-		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-aop</artifactId>
-		    <version>4.3.30.RELEASE</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring</artifactId>-->
+<!--			<version>2.5.6</version>-->
+<!--		</dependency>-->
+<!--		 https://mvnrepository.com/artifact/org.springframework/spring-dao -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-dao</artifactId>-->
+<!--			<version>2.0.8</version>-->
+<!--		</dependency>-->
+<!--		 https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.data</groupId>-->
+<!--			<artifactId>spring-data-jpa</artifactId>-->
+<!--			<version>2.0.0.RELEASE</version>-->
+<!--		</dependency>-->
+<!--		 https://mvnrepository.com/artifact/org.springframework/spring-mock -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-mock</artifactId>-->
+<!--			<version>2.0</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		 https://mvnrepository.com/artifact/org.springframework/spring-support -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-support</artifactId>-->
+<!--			<version>2.0.8</version>-->
+<!--		</dependency>					-->
+<!--		 https://mvnrepository.com/artifact/org.springframework/spring-aop -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-aop</artifactId>-->
+<!--			<version>4.3.30.RELEASE</version>-->
+<!--		</dependency>								-->
+<!--		 https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-jdbc</artifactId>-->
+<!--			<version>4.3.30.RELEASE</version>-->
+<!--		</dependency>						-->
+<!--		 https://mvnrepository.com/artifact/org.springframework/spring-test -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-test</artifactId>-->
+<!--			<version>4.3.30.RELEASE</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		 https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-tx</artifactId>-->
+<!--			<version>4.3.30.RELEASE</version>-->
+<!--		</dependency>-->
 		
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>4.3.30.RELEASE</version>
-			<scope>test</scope>
-		</dependency>
 		
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>4.3.30.RELEASE</version>
-		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 		
-				
-		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->		
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
@@ -177,14 +209,14 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>4.4.0</version>
+			<version>5.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-inline</artifactId>
-			<version>4.4.0</version>
+			<version>5.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		
@@ -379,7 +411,15 @@
 			<artifactId>freemarker</artifactId>
 			<version>2.3.8</version>
 		</dependency>
-				
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		
+		<!-- Esta repetida tiene una mejor version
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>-->
+		
 		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -621,7 +661,7 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.1.1</version>
+			<version>1.5</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
@@ -717,15 +757,13 @@
 			<version>1.2</version>
 		</dependency>
 		
-		<!-- falta configuracion -->
-		<!--
+		<!-- falta configuracion
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.8.1</version>
 		</dependency>
 		-->
-		
 		
 		<dependency>
 			<groupId>joda-time</groupId>
@@ -743,10 +781,10 @@
 		
 		<!-- ********FIN******************************************************************** -->
 		
-				
+		
+		
+		
 	</dependencies>
-	
-	
 
 	<build>
 		<finalName>springapp</finalName>
